CityNexus.Infra.MailPit/service.yml
apiVersion: v1
kind: Service
metadata:
  name: citynexus-infra-mailpit
spec:
  selector:
    app: citynexus-infra-mailpit
  ports:
    - port: 8025
      name: webui
      targetPort: 8025  
    - port: 1025
      name: smtp
      targetPort: 1025
      appProtocol: tcp
