CityNexus.Infra.MailPit/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citynexus-infra-mailpit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mailpit.citynexus.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: citynexus-infra-mailpit
                port:
                  number: 8025
